Fix authentication issues and add CI/CD pipeline
 Core Fixes:
- Fixed SecurityConfig.java to properly handle /api/v1/auth/** endpoints
- Updated Angular components to use latest Material Design syntax (mat-chip-set)
- All 27 tests now passing with authentication fixes

 CI/CD Pipeline:
- Added comprehensive Jenkins CI/CD pipeline with Jenkinsfile
- Added Docker compose configurations for test/staging/production
- Added Jenkins setup documentation and environment configuration

 Maintenance:
- Updated .gitignore to exclude build artifacts and cache files
- Fixed Angular deprecated component syntax for Angular 16 compatibility